manifests/apps/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: inventory
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: inventory
